# static/swagger.json
@@ -11,7 +11,7 @@
     }
   ],
   "paths": {
-    "/cars": {
+    "/cars/getList": {
       "get": {
         "summary": "Method for obtaining a list of all cars",
         "tags": [
@@ -40,7 +40,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/cars/create": {
       "post": {
         "summary": "The method of creating a new car",
         "tags": [
@@ -122,7 +124,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/car/deleteCar/{carId}": {
       "delete": {
         "summary": "The method of removing a car by Id",
         "tags": [
@@ -159,7 +163,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/car/editingCar/{carId}": {
       "put": {
         "summary": "Method of editing car data by Id",
         "tags": [
@@ -254,7 +260,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/user/deleteUser/{id}": {
       "delete": {
         "summary": "The method of removing a user by Id",
         "tags": [
@@ -291,7 +299,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/user/editingUser/{id}": {
       "put": {
         "summary": "Method of editing user data by Id",
         "tags": [
@@ -345,7 +355,7 @@
         }
       }
     },
-    "/user": {
+    "/user/register": {
       "post": {
         "summary": "The method of creating a new user",
         "tags": [
@@ -427,7 +437,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/rental/deleteRental/{idrental}": {
       "delete": {
         "summary": "The method of removing a rental by Id",
         "tags": [
@@ -464,7 +476,9 @@
             }
           }
         }
-      },
+      }
+    },
+    "/rental/editingRental/{idrental}": {
       "put": {
         "summary": "Method of editing rental data by Id",
         "tags": [
@@ -518,7 +532,7 @@
         }
       }
     },
-    "/rental": {
+    "/rental/create": {
       "post": {
         "summary": "The method of creating a new rental",
         "tags": [
